# project-echo

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml
.claude/skills/hdc-query/: SKILL.md
.claude/skills/hosxp-claude-project/: SKILL.md
.claude/skills/hosxp-query/: SKILL.md
app/: __init__.py  config.py
app/api/: __init__.py  routes.py  routes_admin.py  routes_auth.py  routes_barcode.py  routes_search.py  views.py
app/models/: connection.py  local_db.py  user.py
app/services/: base_service.py  hosxp_service.py  render_service.py  scheduler_service.py  sheet_service.py
app/utils/: auth.py  email.py  helpers.py  sql_reader.py  validators.py
instance/: barcode_cache.json
sql/: a1c.sql  consult.sql  egfr.sql  emr_hx_pe_dx_op.sql  emr_rx.sql  flow_opd.sql  inr.sql  schema.sql
static/css/: main.css  theme.css
static/css/components/: form.css  theme-modifiers.css
static/css/pages/: dashboard.css  emr.css
static/js/: api.js  main.js  utils.js
static/js/pages/: a1c.js  admin.js  consult.js  echo.js  egfr.js  emr.js  flow_opd.js  inr.js
templates/: base.html
templates/components/: footer.html  head.html  header.html  nav.html  search_form.html
templates/pages/: a1c.html  admin.html  consult.html  echo.html  echo_login.html  egfr.html  emr.html  emr_login.html  flow_opd.html  index.html  inr.html  login.html  pending_approval.html  query.html  results.html  setup_2fa.html  verify_2fa.html
tests/: test_app.py
