[project]
name = "project-echo"
version = "0.1.0"
description = "Project Echo - Web Application for Data Query and Visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",            # Web Framework
    "flask-wtf",        # CSRF Protection & Form handling
    "pandas",           # DataFrame operations
    "sqlalchemy",       # Database ORM
    "pymysql",          # MySQL/MariaDB driver for HosXP
    "python-dotenv",    # Environment variable management
    "gunicorn",         # Production WSGI server
    "authlib",          # Google OAuth/OIDC client
    "requests",         # HTTP client required by authlib's Flask integration
    "pyotp>=2.10.0",
    "qrcode[pil]>=8.2",
]

[dependency-groups]
dev = ["pytest"]

[tool.uv]
# uv manages the virtual environment automatically
